--- a/.golangci.yml
+++ b/.golangci.yml
@@ -157,6 +157,16 @@ linters:
 issues:
   max-issues-per-linter: 10000
   max-same-issues: 10000
+  exclude-rules:
+    # Allow fmt.Println in cmd/ directories (CLI tools need console output)
+    - path: (.+)/cmd/(.+)\.go$
+      linters:
+        - forbidigo
+    # Allow os.Exit in cmd/ directories (CLI tools need exit codes)
+    - path: (.+)/cmd/(.+)\.go$
+      text: "deep-exit"
+      linters:
+        - revive
 formatters:
   enable:
     - gci
