Revert "use slog"
This reverts commit 95c6dd6d0212c119ff050f8dfccd07ea10401335.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -154,6 +154,10 @@ linters:
       # Allow shadowing of `err` because it's so common
       - path: (.+)\.go$
         text: declaration of "err" shadows declaration at
+      # Allow fmt.Println in cmd/ directories (CLI tools need console output)
+      - path: (.+)/cmd/(.+)\.go$
+        linters:
+          - forbidigo
       # Allow os.Exit in cmd/ directories (CLI tools need exit codes)
       - path: (.+)/cmd/(.+)\.go$
         text: "deep-exit"
