support validation of key responses (#9)
# Support Validation of Key Responses

## Summary

Adds a validation library that enables clients to cryptographically
verify TEE key attestations.

This PR introduces:

1. A customer-facing validation library (`validation/`)
2. COSE_Sign1 attestation parsing and signature verification
3. Support for the new `attestation_cose_base64` field in `KeyResponse`
4. Shared parsing utilities in `enclaveapi/parsing/` to eliminate code
duplication

The validation library cryptographically proves that:
- The public key was generated inside a genuine AWS Nitro Enclave
- The enclave is running known, audited code (PCR verification)
- The attestation is signed by AWS Nitro hardware and hasn't been
tampered with
- The public key matches what's in the signed attestation

## API Changes

### New Field in KeyResponse

```jsonc
{
  "type": "key_response",
  "public_key": "-----BEGIN PUBLIC KEY-----\n...",
  "attestation_cose_base64": "hEShATgi...",  // NEW: Base64-encoded COSE_Sign1
  "key_attestation": {...},                   // DEPRECATED
  "tee_instance_ip": "10.10.1.199"
}
```

**Backward Compatibility:**
- `key_attestation` field still present (marked deprecated)
- Existing clients continue to work
- New clients should use `attestation_cose_base64`

### Validation Library Usage

```go
import "github.com/cloudx-io/openauction/validation"

// Fetch key from TEE
keyResponse := ...

// Validate attestation
result, err := validation.ValidateKeyAttestation(
    keyResponse.AttestationCOSEBase64,
    keyResponse.PublicKey,
)

if err != nil {
    return fmt.Errorf("validation error: %w", err)
}

if !result.IsValid() {
    return errors.New("attestation validation failed")
}

// Safe to use keyResponse.PublicKey for encryption
```

**KeyValidationResult Fields:**
- `PCRsValid` - Code integrity verified
- `CertificateValid` - Certificate chain verified
- `SignatureValid` - COSE signature verified
- `PublicKeyMatch` - Public key matches attestation


--- a/.golangci.yml
+++ b/.golangci.yml
@@ -154,6 +154,15 @@ linters:
       # Allow shadowing of `err` because it's so common
       - path: (.+)\.go$
         text: declaration of "err" shadows declaration at
+      # Allow fmt.Println in cmd/ directories (CLI tools need console output)
+      - path: (.+)/cmd/(.+)\.go$
+        linters:
+          - forbidigo
+      # Allow os.Exit in cmd/ directories (CLI tools need exit codes)
+      - path: (.+)/cmd/(.+)\.go$
+        text: "deep-exit"
+        linters:
+          - revive
 issues:
   max-issues-per-linter: 10000
   max-same-issues: 10000
